# coding-agents

./: .env.example  .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  DEPENDENCIES.md  Dockerfile  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code_agent_workflow.yml  reviewer_workflow.yml
docs/: ИНСТРУКЦИЯ_ЗАПУСКА_И_ИСПОЛЬЗОВАНИЯ.md  ОБХОД_ГЕО_ОГРАНИЧЕНИЙ_OPENAI.md  ПЛАН_РЕАЛИЗАЦИИ_И_АНАЛИЗ.md
src/coding_agents/: __init__.py  config.py  utils.py
src/coding_agents/api/: __init__.py  server.py
src/coding_agents/cli/: main.py
src/coding_agents/domain/: __init__.py  interfaces.py  models.py
src/coding_agents/infrastructure/: git_operations.py  github_client.py  llm_client.py
src/coding_agents/orchestration/: __init__.py  sdlc_orchestrator.py
src/coding_agents/prompts/: __init__.py  code_agent_prompts.py  reviewer_prompts.py
src/coding_agents/services/: __init__.py  code_agent.py  reviewer_agent.py
tests/: __init__.py  test_config.py
tests/unit/: test_code_agent.py  test_github_client.py  test_reviewer_agent.py
